# pixel-gen

./: .gitignore  README.md  pyproject.toml
research/: all_in_one_pixel_model.py  im_to_im_pixel_art_xl.py  numpy_pixelating.py  pill_pixelating.py  pixel_art_redmont.py  pixel_art_style.py  pixel_art_xl.py  pixelate_pipeline.py  pixelate_research.py  pyxelate_research.py  utils.py
research/howto/: stable_diffusion_ipynb_.ipynb
src/pixel_gen/: pixgen.py
